--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,12 @@ addons:
     - libcurl4-openssl-dev
     - libelf-dev
     - libdw-dev
+    - libbfd-dev
 after_success:
 - travis-cargo --only stable doc-upload
-- travis-cargo --only stable coveralls --no-sudo
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis-cargo coveralls --no-sudo --verify; fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./kcov/build/src/kcov --verify --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kontex-*; fi
+
 env:
   global:
   - TRAVIS_CARGO_NIGHTLY_FEATURE=""
